* make cmdline scripting more flexible (allow system://in and script://<expression>)